--- a/vf.html
+++ b/vf.html
@@ -1322,7 +1322,7 @@ phina.main(function() {
     assets: ASSETS,       // アセット読み込み
   });
 
-  app.enableStats();
+  //app.enableStats();
 
   // 実行
   app.run();
