--- a/vf.html
+++ b/vf.html
@@ -102,8 +102,9 @@ var ASSETS = {
 	  todome: 'https://rawgit.com/rrf1050/test/master/se/todome.wav',
 	}
 };
+var SWITCH = true;
 var FOUR = 4;
-if(!phina.isMobile()){
+if(SWITCH||!phina.isMobile()){
   FOUR=1;
 }
 var SCREEN_WIDTH  = 960/FOUR;              // スクリーン幅
@@ -1107,7 +1108,7 @@ phina.define("MainScene", {
     this.superInit(options);
 
     // 背景
-    if(phina.isMobile()){
+    if(!SWITCH||phina.isMobile()){
     this.bg = Sprite("bg25").addChildTo(this);
     this.bg1 = Sprite("bg25").addChildTo(this);
     this.bg2 = Sprite("bg25").addChildTo(this);
@@ -1123,7 +1124,7 @@ phina.define("MainScene", {
     this.bg1.x=-SCREEN_WIDTH;
     this.bg2.x=+SCREEN_WIDTH;
     // プレイヤー
-    if(!phina.isMobile()){
+    if(SWITCH||!phina.isMobile()){
       this.player = GameObject(['maki0','maki1','maki2','maki3','maki4','maki5','maki6'],'maki_ss',this,-300,0,false);
       this.enemy = GameObject(['yukari0','yukari1','yukari2','yukari3','yukari4','yukari5'],'yukari_ss',this,300,0,true);
     }
