--- a/vf.html
+++ b/vf.html
@@ -54,12 +54,16 @@ var ASSETS = {
     yukari5: 'https://rawgit.com/rrf1050/test/master/graphic/yukari-5.png',
     maki25: 'https://rawgit.com/rrf1050/test/master/graphic/maki_25.png',
     yukari25: 'https://rawgit.com/rrf1050/test/master/graphic/yukari_25.png',
+    maki_test0: 'https://rawgit.com/rrf1050/test/master/graphic/maki_test-0.png',
+    maki_test1: 'https://rawgit.com/rrf1050/test/master/graphic/maki_test-1.png',
+    maki_test2: 'https://rawgit.com/rrf1050/test/master/graphic/maki_test-2.png',
   },
 	spritesheet: {
 		'maki_ss': 'https://rawgit.com/rrf1050/test/master/ss/maki.ss',
 		'yukari_ss': 'https://rawgit.com/rrf1050/test/master/ss/yukari.ss',
 		"maki25_ss": "https://rawgit.com/rrf1050/test/master/ss/maki_25.json",
 		"yukari25_ss": "https://rawgit.com/rrf1050/test/master/ss/yukari_25.json",
+		"maki_test_ss": 'https://rawgit.com/rrf1050/test/master/ss/maki_test.json',
 	},
 	json: {
 	  hantei0: 'https://rawgit.com/rrf1050/test/master/hantei/backstep/backstephantei.txt.json',
@@ -102,7 +106,7 @@ var ASSETS = {
 	  todome: 'https://rawgit.com/rrf1050/test/master/se/todome.wav',
 	}
 };
-var SWITCH = true;
+var SWITCH =true;
 var FOUR = 4;
 if(SWITCH||!phina.isMobile()){
   FOUR=1;
@@ -1108,7 +1112,7 @@ phina.define("MainScene", {
     this.superInit(options);
 
     // 背景
-    if(!SWITCH||phina.isMobile()){
+    if(!SWITCH&&phina.isMobile()){
     this.bg = Sprite("bg25").addChildTo(this);
     this.bg1 = Sprite("bg25").addChildTo(this);
     this.bg2 = Sprite("bg25").addChildTo(this);
@@ -1125,7 +1129,8 @@ phina.define("MainScene", {
     this.bg2.x=+SCREEN_WIDTH;
     // プレイヤー
     if(SWITCH||!phina.isMobile()){
-      this.player = GameObject(['maki0','maki1','maki2','maki3','maki4','maki5','maki6'],'maki_ss',this,-300,0,false);
+      //this.player = GameObject(['maki0','maki1','maki2','maki3','maki4','maki5','maki6'],'maki_ss',this,-300,0,false);
+      this.player = GameObject(['maki_test0','maki_test1','maki_test2'],'maki_test_ss',this,-300,0,false);
       this.enemy = GameObject(['yukari0','yukari1','yukari2','yukari3','yukari4','yukari5'],'yukari_ss',this,300,0,true);
     }
     else{
