--- a/vf.html
+++ b/vf.html
@@ -1184,7 +1184,7 @@ phina.define("MainScene", {
     this.slashSE = AssetManager.get("sound","slash");
     this.todomeSE = AssetManager.get("sound","todome");
     
-    //this.enemy.mode="standby";
+    this.enemy.mode="standby";
    //console.memory();
   },
   
