--- a/vf.html
+++ b/vf.html
@@ -119,8 +119,8 @@ var FOUR = 4/3;
 if(SWITCH||!phina.isMobile()){
   FOUR=1;
 }
-var SCREEN_WIDTH  = 960/2/FOUR;              // スクリーン幅
-var SCREEN_HEIGHT = 540/2/FOUR;              // スクリーン高さ
+var SCREEN_WIDTH  = 960/FOUR;              // スクリーン幅
+var SCREEN_HEIGHT = 540/FOUR;              // スクリーン高さ
 var SPEED         = 10;
 var JUMP_Y = 0;
 var JUMP_DY=0;
