--- a/vf.html
+++ b/vf.html
@@ -115,7 +115,7 @@ var ASSETS = {
 	  todome: 'https://rawgit.com/rrf1050/test/master/se/todome.wav',
 	}
 };
-var SWITCH =false;
+var SWITCH =true;
 var FOUR = 4/3;
 if(SWITCH||!phina.isMobile()){
   FOUR=1;
