--- a/vf.html
+++ b/vf.html
@@ -1242,8 +1242,8 @@ phina.define("MainScene", {
       //this.enemy2 = GameObject(['yukari_rc'],'yukari_ss',this,300/FOUR,0,true);
     }
     else{
-      this.player = GameObject(['yukari_25'],'yukari25_ss',this,-300/FOUR,0,false);
-      this.enemy = GameObject(['yukari_25'],'yukari25_ss',this,300/FOUR,0,true);
+      this.player = GameObject(['yukari_4bit'],'yukari_4bit_ss',this,-300/FOUR,0,false);
+      this.enemy = GameObject(['yukari_4bit'],'yukari_4bit_ss',this,300/FOUR,0,true);
     }
     this.player.object.reverse=true;
     
