--- a/test.html
+++ b/test.html
@@ -5,7 +5,19 @@
 </head>
 <body>
  <script>
-	alert("test");
+var context;
+window.addEventListener('load', init, false);
+function init() {
+  try {
+    // Fix up for prefixing
+    window.AudioContext = window.AudioContext||window.webkitAudioContext;
+    context = new AudioContext();
+		alert(context);
+  }
+  catch(e) {
+    alert('Web Audio API is not supported in this browser');
+  }
+}
 	</script>
 </body>
 </html>
