--- a/test.html
+++ b/test.html
@@ -5,6 +5,14 @@
 </head>
 <body>
  <script>
+	function ios_ver (){
+  	var ios_ua = navigator.userAgent;
+    if( ios_ua.indexOf("iPhone") > 0 ) {
+      ios_ua.match(/iPhone OS (\w+){1,3}/g);
+      var version = (RegExp.$1.replace(/_/g, '')+'00').slice(0,3);
+      return version;
+    }
+  }
 var context;
 window.addEventListener('load', init, false);
 function init() {
@@ -15,7 +23,7 @@ function init() {
 		alert(context);
   }
   catch(e) {
-    alert('Web Audio API is not supported in this browser');
+    alert('Web Audio API is not supported in this browser\n'+ios_ver());
   }
 }
 	</script>
