--- a/test.html
+++ b/test.html
@@ -23,7 +23,7 @@ function init() {
 		alert(context);
   }
   catch(e) {
-    alert('Web Audio API is not supported in this browser\n'+ios_ver());
+    alert('Web Audio API is not supported in this browser\n'+navigator.userAgent);
   }
 }
 	</script>
