--- a/vf.html
+++ b/vf.html
@@ -13,6 +13,7 @@ http://rrfgames.sitemix.jp/vf.html
     
     <style>*, *:before, *:after {
   box-sizing: border-box; 
+overflow-y: hidden;
 }
 canvas{
   image-rendering: -moz-crisp-edges;         /* Firefox */
@@ -21,6 +22,7 @@ canvas{
   image-rendering: crisp-edges;
   -ms-interpolation-mode: nearest-neighbor;  /* IE (非標準プロパティ) */
   image-rendering: pixelated;
+overflow-y: hidden;
 }
 html {
   font-size: 62.5%;
@@ -29,9 +31,11 @@ html {
 body {
   color: #444;
   background-color: hsl(0, 0%, 96%);
+overflow-y: hidden;
 }
 h1 {
   font-size: 1.8rem;
+overflow-y: hidden;
 }
 
   </style>
