--- a/vf.html
+++ b/vf.html
@@ -22,7 +22,7 @@ canvas{
   image-rendering: crisp-edges;
   -ms-interpolation-mode: nearest-neighbor;  /* IE (非標準プロパティ) */
   image-rendering: pixelated;
-  
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 html {
   font-size: 62.5%;
