--- a/vf.html
+++ b/vf.html
@@ -1426,8 +1426,9 @@ phina.define("MainScene", {
     var pointflag=true;
     for(con in this.clist1){
       this.clist1[con].dummy.setInteractive(true);
-      this.clist1[con].dummy.onpointstart=function(){
-        if(this.getParent().visible){
+      this.clist1[con].dummy.onpointstart=function(e){
+        var p = e.interactive.app.touchList.touches;
+        if(this.getParent().visible&&p.length==1){
           pointflag=true;
           clists.some(function(clist){
               if(clist["root"].owner.alpha==1||clist["root"].owner.alpha==0.25){
@@ -1451,8 +1452,9 @@ phina.define("MainScene", {
     }
     for(con in this.clist2){
       this.clist2[con].dummy.setInteractive(true);
-      this.clist2[con].dummy.onpointstart=function(){
-        if(this.getParent().visible){
+      this.clist2[con].dummy.onpointstart=function(e){
+        var p = e.interactive.app.touchList.touches;
+        if(this.getParent().visible&&p.length==1){
           pointflag=true;
           clists.some(function(clist){
               if(clist["root"].owner.alpha==1||clist["root"].owner.alpha==0.25){
@@ -1477,8 +1479,9 @@ phina.define("MainScene", {
     }
     for(con in this.clist_c){
       this.clist_c[con].dummy.setInteractive(true);
-      this.clist_c[con].dummy.onpointstart=function(){
-        if(this.getParent().visible){
+      this.clist_c[con].dummy.onpointstart=function(e){
+        var p = e.interactive.app.touchList.touches;
+        if(this.getParent().visible&&p.length==1){
           pointflag=true;
           clists.some(function(clist){
               if(clist["root"].owner.alpha==1||clist["root"].owner.alpha==0.25){
