--- a/vf.html
+++ b/vf.html
@@ -45,7 +45,7 @@ h1 {
 // グローバルに展開
 phina.globalize();
 // 定数
-window.onerror = function (msg, file, line, column, err) {
+//window.onerror = function (msg, file, line, column, err) {
     /*
     msg: error message
     file: file path
@@ -53,8 +53,8 @@ window.onerror = function (msg, file, line, column, err) {
     column: column number
     err: error object
     */ 
-    alert(msg + file + ':' + line);
-};
+//    alert(msg + file + ':' + line);
+//};
 var ASSETS = {
   image: {
     bg25: "https://rawgit.com/rrf1050/test/master/graphic/haikei25.png",
