--- a/vf.html
+++ b/vf.html
@@ -1821,7 +1821,7 @@ phina.define("MainScene", {
     }
     //console.log(this.enemy.mode,this.enemy.sitcounter,this.enemy.sit,this.enemy.input.down);
      //console.log(app.canvas.miterLimit);
-     this.pre_fflag=fflag;
+     this.pre_fflag=this.fflag;
   }
 });
 
