--- a/vf.html
+++ b/vf.html
@@ -29,7 +29,7 @@ html {
 
 }
 body {
-  position: fixed;
+  position: relative;
 	width: 100%;
   color: #444;
   background-color: hsl(0, 0%, 96%);
