--- a/vf.html
+++ b/vf.html
@@ -14,6 +14,7 @@ http://rrfgames.sitemix.jp/vf.html
     <style>*, *:before, *:after {
   box-sizing: border-box; 
     overflow-y: hidden;
+    overflow-x: hidden;
 }
 canvas{
   image-rendering: -moz-crisp-edges;         /* Firefox */
