--- a/vf.html
+++ b/vf.html
@@ -15,6 +15,7 @@ http://rrfgames.sitemix.jp/vf.html
   box-sizing: border-box; 
     overflow-y: hidden;
     overflow-x: hidden;
+    position: relative;
 }
 canvas{
   image-rendering: -moz-crisp-edges;         /* Firefox */
