--- a/vf.html
+++ b/vf.html
@@ -15,7 +15,6 @@ http://rrfgames.sitemix.jp/vf.html
   box-sizing: border-box; 
     overflow-y: hidden;
     overflow-x: hidden;
-    position: relative;
 }
 canvas{
   image-rendering: -moz-crisp-edges;         /* Firefox */
@@ -44,6 +43,7 @@ h1 {
    <script src="https://rawgit.com/rrf1050/test/master/build/phina.js" crossorigin="anonymous"></script> 
    <!--<script src="http://cdn.rawgit.com/phi-jp/phina.js/v0.2.0/build/phina.js"></script> !-->
     <script>//console.log(Math.pow(2,0.5));
+$(document).on('touchmove.noScroll', function(e) {e.preventDefault();});
 // グローバルに展開
 phina.globalize();
 // 定数
