--- a/vf.html
+++ b/vf.html
@@ -40,6 +40,7 @@ h1 {
   </style>
   </head>
   <body>
+<script src="https://rawgit.com/rrf1050/test/master/build/jquery-3.1.1.min.js" crossorigin="anonymous"></script>
    <script src="https://rawgit.com/rrf1050/test/master/build/phina.js" crossorigin="anonymous"></script> 
    <!--<script src="http://cdn.rawgit.com/phi-jp/phina.js/v0.2.0/build/phina.js"></script> !-->
     <script>//console.log(Math.pow(2,0.5));
