--- a/vf.html
+++ b/vf.html
@@ -44,28 +44,9 @@ h1 {
    <script src="https://rawgit.com/rrf1050/test/master/build/phina.js" crossorigin="anonymous"></script> 
    <!--<script src="http://cdn.rawgit.com/phi-jp/phina.js/v0.2.0/build/phina.js"></script> !-->
     <script>//console.log(Math.pow(2,0.5));
-$(function(){
- 
-//スクロール禁止用関数
-function no_scroll(){
-//PC用
-var scroll_event = 'onwheel' in document ? 'wheel' : 'onmousewheel' in document ? 'mousewheel' : 'DOMMouseScroll';
-$(document).on(scroll_event,function(e){e.preventDefault();});
-//SP用
-$(document).on('touchmove.noScroll', function(e) {e.preventDefault();});
-}
- 
-//スクロール復活用関数
-function return_scroll(){
-//PC用
-var scroll_event = 'onwheel' in document ? 'wheel' : 'onmousewheel' in document ? 'mousewheel' : 'DOMMouseScroll';
-$(document).off(scroll_event);
-//SP用
-$(document).off('.noScroll');
-}
- 
+$(window).on('touchmove.noScroll', function(e) {
+    e.preventDefault();
 });
-$no_scroll();
 // グローバルに展開
 phina.globalize();
 // 定数
