--- a/vf.html
+++ b/vf.html
@@ -23,7 +23,8 @@ canvas{
   image-rendering: crisp-edges;
   -ms-interpolation-mode: nearest-neighbor;  /* IE (非標準プロパティ) */
   image-rendering: pixelated;
-  -webkit-tap-highlight-color: rgba(0,0,0,0); 
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+  scrolling: no;
 }
 html {
   font-size: 62.5%;
