--- a/vf.html
+++ b/vf.html
@@ -41,6 +41,7 @@ h1 {
   </style>
   </head>
   <body>
+<iframe src="" scrolling="no">
 <script src="https://rawgit.com/rrf1050/test/master/build/jquery-3.1.1.min.js" crossorigin="anonymous"></script>
    <script src="https://rawgit.com/rrf1050/test/master/build/phina.js" crossorigin="anonymous"></script> 
    <!--<script src="http://cdn.rawgit.com/phi-jp/phina.js/v0.2.0/build/phina.js"></script> !-->
@@ -1936,6 +1937,7 @@ phina.main(function() {
   // 実行
   app.run();
 });</script>
+   </iframe>
   </body>
 </html>
 
