--- a/test.html
+++ b/test.html
@@ -4,28 +4,6 @@
 <title></title>
 </head>
 <body>
- <script>
-	function ios_ver (){
-  	var ios_ua = navigator.userAgent;
-    if( ios_ua.indexOf("iPhone") > 0 ) {
-      ios_ua.match(/iPhone OS (\w+){1,3}/g);
-      var version = (RegExp.$1.replace(/_/g, '')+'00').slice(0,3);
-      return version;
-    }
-  }
-var context;
-window.addEventListener('load', init, false);
-function init() {
-  try {
-    // Fix up for prefixing
-    window.AudioContext = window.AudioContext||window.webkitAudioContext;
-    context = new AudioContext();
-		alert(context);
-  }
-  catch(e) {
-    alert('Web Audio API is not supported in this browser\n'+navigator.userAgent);
-  }
-}
-	</script>
+ <iframe src="./vf.html" scrolling="no"></iframe>
 </body>
 </html>
