--- a/test.html
+++ b/test.html
@@ -2,8 +2,14 @@
 <head>
 <meta charset="UTF-8">
 <title></title>
+<style>*, *:before, *:after {
+  box-sizing: border-box; 
+    overflow-y: hidden;
+    overflow-x: hidden;
+}</style>
 </head>
 <body>
- <iframe src="./vf.html" scrolling="no"></iframe>
+ <iframe src="./vf.html" scrolling="no" width="100%" height="100%"></iframe>
+
 </body>
 </html>
