--- a/test.html
+++ b/test.html
@@ -8,7 +8,7 @@
 }</style>
 </head>
 <body>
- <iframe src="./vf.html" scrolling="no" width="100%" height="100%"></iframe>
+ <iframe src="./vf.html" scrolling="no" width="100%" height="100%" frameborder="0" marginwidth="0" marginheight="0"></iframe>
 
 </body>
 </html>
