--- a/vf.html
+++ b/vf.html
@@ -44,8 +44,8 @@ h1 {
    <script src="https://rawgit.com/rrf1050/test/master/build/phina.js" crossorigin="anonymous"></script> 
    <!--<script src="http://cdn.rawgit.com/phi-jp/phina.js/v0.2.0/build/phina.js"></script> !-->
     <script>//console.log(Math.pow(2,0.5));
-$(window).on('touchmove.noScroll', function(e) {
-    e.preventDefault();
+document.addEventListener('touchmove', function(evt) {
+    evt.preventDefault();
 });
 // グローバルに展開
 phina.globalize();
