--- a/vf.html
+++ b/vf.html
@@ -24,6 +24,7 @@ canvas{
   image-rendering: pixelated;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
   scrolling: no;
+	height: window.innerHeight;
 }
 html {
   font-size: 62.5%;
