--- a/vf.html
+++ b/vf.html
@@ -24,6 +24,13 @@ canvas{
   image-rendering: pixelated;
   scrolling: no;
 	height: window.innerHeight;
+    -webkit-touch-callout: none;
+-webkit-user-select: none;
+-khtml-user-select: none;
+-moz-user-select: none;
+-ms-user-select: none;
+-o-user-select: none;
+user-select: none;
 }
 html {
   font-size: 62.5%;
