--- a/vf.html
+++ b/vf.html
@@ -38,7 +38,13 @@ html {
 }
 body {
   color: #444;
-  background-color: hsl(0, 0%, 96%);
+  -webkit-touch-callout: none;
+-webkit-user-select: none;
+-khtml-user-select: none;
+-moz-user-select: none;
+-ms-user-select: none;
+-o-user-select: none;
+user-select: none;
 }
 h1 {
   font-size: 1.8rem;
