--- a/vf.html
+++ b/vf.html
@@ -14,6 +14,13 @@ http://rrfgames.sitemix.jp/vf.html
     <style>*, *:before, *:after {
     overflow-y: hidden;
     overflow-x: hidden;
+    -webkit-touch-callout: none;
+-webkit-user-select: none;
+-khtml-user-select: none;
+-moz-user-select: none;
+-ms-user-select: none;
+-o-user-select: none;
+user-select: none;
 }
 canvas{
   image-rendering: -moz-crisp-edges;         /* Firefox */
