--- a/vf.html
+++ b/vf.html
@@ -67,6 +67,7 @@ h1 {
 document.addEventListener('touchmove', function(evt) {
     evt.preventDefault();
 });
+document.onselectstart = function() { return false; };
 // グローバルに展開
 phina.globalize();
 // 定数
