--- a/vf.html
+++ b/vf.html
@@ -65,9 +65,10 @@ h1 {
    <script src="https://rawgit.com/rrf1050/test/master/build/phina.js" crossorigin="anonymous"></script> 
    <!--<script src="http://cdn.rawgit.com/phi-jp/phina.js/v0.2.0/build/phina.js"></script> !-->
     <script>//console.log(Math.pow(2,0.5));
-/*document.addEventListener('touchmove', function(evt) {
-    evt.preventDefault();
+document.addEventListener('touchmove', function(evt) {
+    if (!$('.scrollable').has($(e.target)).length) e.preventDefault();
 });
+/*
 document.addEventListener('touchstart', function(evt) {
     evt.preventDefault();
 });
