--- a/test.html
+++ b/test.html
@@ -1,6 +1,8 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, user-scalable=no" />
+
 <title></title>
 <style>*, *:before, *:after {
     overflow-y: hidden;
