--- a/vf.html
+++ b/vf.html
@@ -2900,7 +2900,7 @@ phina.define('mySplashScene', {
 
   _static: {
     defaults: {
-      imageURL: 'http://cdn.rawgit.com/phi-jp/phina.js/develop/logo.png',
+      imageURL: 'https://rawgit.com/phi-jp/phina.js/develop/logo.png',
     },
   },
 });
