--- a/vf.html
+++ b/vf.html
@@ -2790,7 +2790,7 @@ phina.define('myResultScene', {
         playButton: {
           className: 'phina.ui.Button',
           arguments: [{
-            text: '▶',
+            text: '?',
             width: 28,
             height: 28,
             fontColor: params.fontColor,
@@ -5683,7 +5683,7 @@ phina.define('myResultScene', {
         playButton: {
           className: 'phina.ui.Button',
           arguments: [{
-            text: '▶',
+            text: '?',
             width: 28,
             height: 28,
             fontColor: params.fontColor,
@@ -5794,11 +5794,7 @@ phina.define('mySplashScene', {
 
   _static: {
     defaults: {
-<<<<<<< HEAD
       imageURL: 'https://rawgit.com/phi-jp/phina.js/develop/logo.png',
-=======
-      imageURL: 'http://cdn.rawgit.com/phi-jp/phina.js/develop/logo.png',
->>>>>>> branch 'master' of https://github.com/rrf1050/rrf1050.github.io
     },
   },
 });
@@ -5833,7 +5829,6 @@ phina.main(function() {
   //app.enableStats();
   // 実行
   app.run();
->>>>>>> origin/master
 });</script>
   </body>
 </html>
