--- a/vf_ns.html
+++ b/vf_ns.html
@@ -176,7 +176,7 @@ var SPEED         = 10;
 phina.define("DummyS",{
 	init: function(){
 		this.play = function(){};
-		this.stop = funtion(){};
+		this.stop = function(){};
     this.volume = 0;
 }
 });
